# windows-firewall

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: firewall_config.json
scripts/: download_npcap.ps1  setup_winpcap.ps1
src/: main.c
src/core/: firewall.c  firewall.h  firewall_types.h  packet_handler.c  packet_handler.h  rule_manager.c  rule_manager.h
src/network/: packet_capture.c  packet_capture.h
src/utils/: config.c  config.h  logger.c  logger.h
